--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pug": "^3.0.2",
     "randomstring": "^1.2.2",
     "slugify": "^1.5.3",
+    "subject-extractor": "^1.0.6",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.8",
     "velocityjs": "^2.0.3"
