--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.4",
+    "axios": "^1.1.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -33,6 +33,7 @@
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-cache": "^5.1.2",
     "node-email-extractor": "^1.0.3",
     "nodemailer": "^6.6.1",
     "nodemailer-express-handlebars": "^4.0.0",
@@ -41,6 +42,7 @@
     "portscanner": "^2.2.0",
     "pug": "^3.0.2",
     "randomstring": "^1.2.2",
+    "redis": "^4.3.1",
     "slugify": "^1.5.3",
     "subject-extractor": "^1.0.6",
     "uuid": "^8.3.2",
