--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^9.0.2",
     "dotenv-safe": "^8.2.0",
     "email-crawler": "^1.0.4",
@@ -28,6 +29,7 @@
     "imagekit": "^3.1.2",
     "jade": "^1.11.0",
     "js-crawler": "^0.3.21",
+    "legit": "^1.0.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^5.12.7",
