--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redis": "^4.3.1",
     "slugify": "^1.5.3",
     "subject-extractor": "^1.0.6",
+    "twilio": "^3.83.4",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.8",
     "velocityjs": "^2.0.3"
