--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
     "order-id": "^2.1.1",
+    "paypal-rest-sdk": "^1.8.1",
     "portscanner": "^2.2.0",
     "pug": "^3.0.2",
     "randomstring": "^1.2.2",
