--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "generate-password": "^1.6.0",
     "get-site-urls": "^1.1.7",
     "http-errors": "^1.8.0",
+    "image-to-base64": "^2.2.0",
     "imagekit": "^3.1.2",
     "jade": "^1.11.0",
     "js-crawler": "^0.3.21",
@@ -37,6 +38,7 @@
     "multer": "^1.4.2",
     "node-cache": "^5.1.2",
     "node-email-extractor": "^1.0.3",
+    "node-fetch": "^3.3.0",
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
