--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deep-email-validator": "^0.1.21",
     "dotenv": "^9.0.2",
     "dotenv-safe": "^8.2.0",
+    "easyinvoice": "^2.3.3",
     "email-crawler": "^1.0.4",
     "email-templates": "^10.0.1",
     "email-validator": "^2.0.4",
