--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "email-templates": "^10.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "generate-password": "^1.6.0",
     "get-site-urls": "^1.1.7",
     "http-errors": "^1.8.0",
@@ -44,6 +45,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
     "order-id": "^2.1.2",
+    "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
     "pdf-creator-node": "^2.3.5",
     "portscanner": "^2.2.0",
