--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "randomstring": "^1.2.2",
     "redis": "^4.3.1",
     "slugify": "^1.5.3",
+    "stripe": "^11.10.0",
     "subject-extractor": "^1.0.6",
     "twilio": "^3.83.4",
     "uuid": "^8.3.2",
