--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.7",
+    "numeral": "^2.0.6",
     "order-id": "^2.1.2",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
